[tool.poetry]
name = "asincio"
version = "0.1.0"
description = ""
authors = ["arletino <titkov@nxt.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "^3.4.3"
aiohttp = "^3.10.1"
requests = "^2.32.3"
aiofiles = "^24.1.0"
tqdm = "^4.66.5"
progressbar = "^2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
